Prettify connection remove button

--- a/src/main/resources/css/flat_white.css
+++ b/src/main/resources/css/flat_white.css
@@ -264,6 +264,14 @@
     -fx-text-fill: salmon;
 }
 
+.connection-remove-icon{
+    -fx-fill: #5F5F5F;
+}
+
+.connection-remove-icon-hover{
+    -fx-fill: salmon;
+}
+
 .block-text{
     -fx-font-size: 30;
     -fx-text-fill: #5F5F5F;
